--- a/desktop.html
+++ b/desktop.html
@@ -36,9 +36,10 @@
             </div>
         </div>
         <div class="recipe">
-            <div class="container">
+            <div class="recipe-item">
                 <h3>客人總是在詢問 <br>
-                    這麼好吃的秘訣是什麼</h3>
+                    這麼好吃的秘訣是什麼
+                </h3>
                 <ul class="menu">
                     <li>
                         <img src="img/feature_1.png" alt="feature1">
@@ -47,22 +48,99 @@
                     </li>
                     <li>
                         <img src="img/feature_2.png" alt="feature1">
-                        <h4>台灣本土蔬菜</h4>
+                        <h4>專業米其林廚師</h4>
                         <p>Sed ullamcorper tellus erat, non ultrices sem tincidunt euismod. Fusce rhoncus porttitor velit, eu bibendum nibh aliquet vel. Fusce lorem leo, vehicula at nibh quis, facilisis accumsan turpis.</p>
                     </li>
                     <li>
                         <img src="img/feature_3.png" alt="feature1">
-                        <h4>台灣本土蔬菜</h4>
+                        <h4>對於專業不能退讓</h4>
                         <p>Fusce rhoncus porttitor velit, eu bibendum nibh aliquet vel. Fusce lorem leo, vehicula at nibh quis, facilisis accumsan turpis.</p>
                     </li>
                 </ul>
             </div>
-
         </div>
-        <div class="chef"></div>
-        <div class="feedback"></div>
-        <div class="map"></div>
-        <div class="footer"></div>
+        <div class="chef">
+            <div class="chef-item">
+                <img src="img/main_chef_brown.png" alt="chef">
+                <div class="introduce">
+                    <h3>今日主廚：帕金森、梅在帕<br>
+                        <span>Tody Chef: Plum in Shock</span>
+                    </h3>
+                    <p>Mauris non tempor quam, et lacinia sapien. Mauris accumsan eros eget libero posuere vulputate. Etiam elit elit, elementum sed varius at, adipiscing vitae est. Sed nec felis pellentesque, lacinia dui sed, ultricies sapien. Pellentesque orci lectus, consectetur vel posuere posuere, rutrum eu ipsum. Aliquam eget odio sed ligula iaculis consequat at eget orci. Mauris molestie sit amet metus mattis varius. Donec sit amet ligula eget nisi sodales egestas. Aliquam interdum dolor aliquet dolor sollicitudin fermentum. Donec congue lorem a molestie bibendum.</p>
+                </div>
+            </div>
+        </div>
+        <div class="feedback">
+            <h3>聽聽別人的感想</h3>
+            <ul class="feedback-item">
+                <li>
+                    <img src="img/avatar_1.png" alt="avater1">
+                    <p>高雄一口吃<br><br>
+                        自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。<br>
+                        <span>-- 產品經理</span>
+                    </p>
+                </li>
+                <li>
+                    <img src="img/avatar_2.png" alt="avater2">
+                    <p>廟口小霸王<br><br>
+                        自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。<br>
+                        <span>-- 產品經理</span>
+                    </p>
+                </li>
+                <li>
+                    <img src="img/avatar_3.png" alt="avater3">
+                    <p>春天也來了<br><br>
+                        自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。<br>
+                        <span>-- 產品經理</span>
+                    </p>
+                </li>
+            </ul>
+        </div>
+        <div class="map">
+            <h3>我們的位置不太夠坐<br>
+                要不要先定位呢？</h3>
+            <div class="map-item">
+                <img src="img/Map.png" alt="map">
+                <div class="input">
+                    <label for="name">姓名</label><br>
+                    <input type="text" placeholder="姓名"><br>
+                    <label for="phone">電話</label><br>
+                    <input type="text" placeholder="電話"><br>
+                    <label for="email">信箱</label><br>
+                    <input type="text" placeholder="信箱"><br>
+                    <label for="peolpe">人數</label><br>
+                    <input type="text" placeholder="人數"><br>
+                    <label for="veg">是否需要素食</label><br>
+                    <label for="yes">是</label>
+                    <input type="radio" placeholder="是" id="yes" value="yes" name="veg">
+                    <label for="no">否</label>
+                    <input type="radio" placeholder="否" id="no" value="no" name="veg"><br>
+                    <input type="button" value="送出" class="btn btn-enter">
+                    <input type="button" value="取消" class="btn btn-cancel">
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="about">
+                <h3>關於 六角西餐廳</h3>
+                <p>Curabitur lobortis id lorem id bibndum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. </p>
+            </div>
+            <div class="contact">
+                <h3>聯絡方式</h3>
+                <ul>
+                    <li>高雄市中正五路到底</li>
+                    <li>+886 886 886</li>
+                    <li>service@hexschool.com</li>
+                </ul>
+            </div>
+            <div class="footer-logo">
+                <i class="fa-brands fa-facebook fb"></i>
+                <i class="fa-brands fa-twitter twitter"></i>
+                <i class="fa-brands fa-youtube yt"></i>
+            </div>
+        </div>
     </div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="desktop.js"></script>
 </html>
